Set document visibility code example (#88)
* added example

* update page

* fixes

* fixes

* add example

* update title

* fixes

* removing numbering and reorganizing homepage

* change description to be consistent with c# example

* fixed number ex 39 and made esignature default

* removed Host name field on code example page

* signer emails

* fix hostname issue

* update comment for clarity

* reordering embed the docusign ui example

Co-authored-by: Paige Rossi <paige.rossi@docusign.com>
Co-authored-by: Patrick Mackle <pimackle@ucdavis.edu>
Co-authored-by: meihDS <70775251+meihDS@users.noreply.github.com>

--- a/views/pages/examples/eg004EnvelopeInfo.ejs
+++ b/views/pages/examples/eg004EnvelopeInfo.ejs
@@ -1,6 +1,6 @@
 <%- include("../../partials/examplesHead") %>
 
-<h4>4. Get an envelope's basic information and status</h4>
+<h4>Get an envelope's basic information and status</h4>
 <p>List the basic information about an envelope, including its overall status.
   Additional API/SDK methods may be used to get additional information about the 
   envelope, its documents, recipients, etc.</p>
