--- a/views/pages/examples/eg005EnvelopeRecipients.ejs
+++ b/views/pages/examples/eg005EnvelopeRecipients.ejs
@@ -1,6 +1,6 @@
 <%- include("../../partials/examplesHead") %>
 
-<h4>5. List an envelope's recipients and their status</h4>
+<h4>List an envelope's recipients and their status</h4>
 <p>List the envelope's recipients, including their current status.</p>
 
 <%- include("../../partials/docBody") %>
