--- a/views/pages/examples/eg006EnvelopeDocs.ejs
+++ b/views/pages/examples/eg006EnvelopeDocs.ejs
@@ -1,6 +1,6 @@
 <%- include("../../partials/examplesHead") %>
 
-<h4>6. List an envelope's documents</h4>
+<h4>List an envelope's documents</h4>
 <p>List the envelope's documents. A <i>Certificate of Completion</i> document 
    is also associated with every envelope.
 </p>
