--- a/views/pages/examples/eg007EnvelopeGetDoc.ejs
+++ b/views/pages/examples/eg007EnvelopeGetDoc.ejs
@@ -1,6 +1,6 @@
 <%- include("../../partials/examplesHead") %>
 
-<h4>7. Download a document from an envelope</h4>
+<h4>Download a document from an envelope</h4>
 <p>An envelope's documents can be downloaded one by one or as a complete set.</p>
 <p>Document download options:</p>
 <ul>
