--- a/views/pages/examples/eg008CreateTemplate.ejs
+++ b/views/pages/examples/eg008CreateTemplate.ejs
@@ -1,6 +1,6 @@
 <%- include("../../partials/examplesHead") %>
 
-<h4>8. Create a template</h4>
+<h4>Create a template</h4>
 <p>Create a template with two roles, <b>signer</b> and <b>cc</b>. 
    The template includes three documents.
 </p>
