--- a/views/pages/examples/eg009UseTemplate.ejs
+++ b/views/pages/examples/eg009UseTemplate.ejs
@@ -1,6 +1,6 @@
 <%- include("../../partials/examplesHead") %>
 
-<h4>9. Send an envelope using a template</h4>
+<h4>Send an envelope using a template</h4>
 <p>The envelope is defined by the template.
    The signer and cc recipient name and email are used to fill in the template's <i>roles</i>.</p>
 
