--- a/views/pages/examples/eg011EmbeddedSending.ejs
+++ b/views/pages/examples/eg011EmbeddedSending.ejs
@@ -1,6 +1,6 @@
 <%- include("../../partials/examplesHead") %>
 
-<h4>11. Use embedded sending</h4>
+<h4>Use embedded sending</h4>
 <p>An envelope will be created in draft mode. Your browser will then be redirected to 
    the DocuSign web tool where the envelope can be (optionally) updated and then sent.</p>
 <p>The envelope includes a pdf, Word, and HTML document. Anchor text 
