--- a/views/pages/examples/eg012EmbeddedConsole.ejs
+++ b/views/pages/examples/eg012EmbeddedConsole.ejs
@@ -1,6 +1,6 @@
 <%- include("../../partials/examplesHead") %>
 
-<h4>12. Embedded DocuSign web tool</h4>
+<h4>Embedded DocuSign web tool</h4>
 <p>Redirect the user to the DocuSign web tool.</p>
 <p>Use this API call to open the DocuSign web tool, the NDSE (New DocuSign Signing Experience), 
     with the user already logged in.</p>
