--- a/views/pages/examples/eg013AddDocToTemplate.ejs
+++ b/views/pages/examples/eg013AddDocToTemplate.ejs
@@ -1,6 +1,6 @@
 <%- include("../../partials/examplesHead") %>
 
-<h4>13. Use Embedded Signing from a template with an added document</h4>
+<h4>Use Embedded Signing from a template with an added document</h4>
 
 <% if (templateOk) { %>
   <p>This example sends an envelope based on a template.</p>
