--- a/views/pages/examples/eg014CollectPayment.ejs
+++ b/views/pages/examples/eg014CollectPayment.ejs
@@ -1,6 +1,6 @@
 <%- include("../../partials/examplesHead") %>
 
-<h4>14. Send an envelope with an order form, including a payment field.</h4>
+<h4>Send an envelope with an order form, including a payment field.</h4>
 
 <h5 style="color: purple;">Note: This example will only work if the sender's DocuSign account
   is set up with a DocuSign payment gateway. Since the Payment Gateway ID 
