--- a/views/pages/examples/eg015EnvelopeTabData.ejs
+++ b/views/pages/examples/eg015EnvelopeTabData.ejs
@@ -1,6 +1,6 @@
 <%- include("../../partials/examplesHead") %>
 
-<h4>15. Get the tab data from an envelope</h4>
+<h4>Get the tab data from an envelope</h4>
 <p>Get the tab (field) values from an envelope for all of the envelope's recipients.</p>
 
 <p>This method is used to read the updated tab values from
