--- a/views/pages/examples/eg016SetTabValues.ejs
+++ b/views/pages/examples/eg016SetTabValues.ejs
@@ -1,6 +1,6 @@
 <%- include("../../partials/examplesHead") %>
 
-<h4>16. Set tab values for a envelope</h4>
+<h4>Set tab values for a envelope</h4>
 <p>This example creates an example with both read-only tabs (fields) and tabs that can
     be updated by the recipient.</p>
 <p>The example also sets custom metadata in the envelope via the envelope custom fields feature.</p>
