--- a/views/pages/examples/eg017SetTemplateTabValues.ejs
+++ b/views/pages/examples/eg017SetTemplateTabValues.ejs
@@ -1,6 +1,6 @@
 <%- include("../../partials/examplesHead") %>
 
-<h4>17. Set template tab values</h4>
+<h4>Set template tab values</h4>
 <p>This example sets the value of a template's tabs. It includes setting
 radio button and checkbox tabs.</p>
 <p>The example also sets custom metadata in the envelope via the envelope custom fields feature.</p>
