--- a/views/pages/examples/eg018EnvelopeCustomFieldData.ejs
+++ b/views/pages/examples/eg018EnvelopeCustomFieldData.ejs
@@ -1,6 +1,6 @@
 <%- include("../../partials/examplesHead") %>
 
-<h4>18. Get the custom field data for an envelope</h4>
+<h4>Get the custom field data for an envelope</h4>
 <p>Get the data values associated with the envelope itself. The custom data fields enable you to
     add additional meta-data to the envelope. The custom data fields can be set by the <b>Sender</b>
 via the DocuSign web tool, or can be set programmatically. The data can be included in the
