--- a/views/pages/examples/eg019AccessCodeAuthentication.ejs
+++ b/views/pages/examples/eg019AccessCodeAuthentication.ejs
@@ -1,6 +1,6 @@
 <%- include("../../partials/examplesHead") %>
 
-<h4>19. Send an envelope with recipient Access-code authentication.</h4>
+<h4>Send an envelope with recipient Access-code authentication.</h4>
 <p>Anchor text 
   (<a href="https://developers.docusign.com/docs/esign-rest-api/esign101/concepts/tabs/auto-place/">AutoPlace</a>)
   is used to position the signing fields in the documents.
