--- a/views/pages/examples/eg022KbaAuthentication.ejs
+++ b/views/pages/examples/eg022KbaAuthentication.ejs
@@ -1,5 +1,5 @@
 <%- include("../../partials/examplesHead") %>
-<h4>22. Requiring Knowledge Based Authentication (KBA) for a Recipient</h4>
+<h4>Requiring Knowledge Based Authentication (KBA) for a Recipient</h4>
 <p>
     The envelope includes a pdf document. Anchor text
     (<a href="https://developers.docusign.com/docs/esign-rest-api/esign101/concepts/tabs/auto-place/">AutoPlace</a>)
