--- a/views/pages/examples/eg023IdvAuthentication.ejs
+++ b/views/pages/examples/eg023IdvAuthentication.ejs
@@ -1,6 +1,6 @@
 <%- include("../../partials/examplesHead") %>
 
-<h4>23. Requiring Id Verification for a Recipient</h4>
+<h4>Requiring Id Verification for a Recipient</h4>
 <p>
     The envelope includes a pdf document. Anchor text
     (<a href="https://developers.docusign.com/docs/esign-rest-api/esign101/concepts/tabs/auto-place/">AutoPlace</a>)
