--- a/views/pages/examples/eg024CreatePermission.ejs
+++ b/views/pages/examples/eg024CreatePermission.ejs
@@ -1,6 +1,6 @@
 <%- include("../../partials/examplesHead") %>
 
-<h4>24. Creating a permission profile</h4>
+<h4>Creating a permission profile</h4>
 <p>
     This code example demonstrates how to create a permission profile
 </p>
