--- a/views/pages/examples/eg025PermissionSetUserGroup.ejs
+++ b/views/pages/examples/eg025PermissionSetUserGroup.ejs
@@ -1,6 +1,6 @@
 <%- include("../../partials/examplesHead") %>
 
-<h4>25.  Setting a permission profile.</h4>
+<h4>Setting a permission profile.</h4>
 
 <p>
     Updates the group name and modifies, or sets, the permission profile for the group.
