--- a/views/pages/examples/eg026PermissionChangeSingleSetting.ejs
+++ b/views/pages/examples/eg026PermissionChangeSingleSetting.ejs
@@ -1,6 +1,6 @@
 <%- include("../../partials/examplesHead") %>
 
-<h4>26. Updating individual permission settings</h4>
+<h4>Updating individual permission settings</h4>
 <p>
   This code example demonstrates how to edit individual permission settings on a permissions profile with the eSignature REST API.
 </p>
