--- a/views/pages/examples/eg027DeletePermission.ejs
+++ b/views/pages/examples/eg027DeletePermission.ejs
@@ -1,6 +1,6 @@
 <%- include("../../partials/examplesHead") %>
 
-<h4>27. Deleting a permission profile</h4>
+<h4>Deleting a permission profile</h4>
 <p>
     Permission profiles are collections of account settings that determine the behavior and actions available
     to the user groups to which they're applied.
