--- a/views/pages/examples/eg028CreateBrand.ejs
+++ b/views/pages/examples/eg028CreateBrand.ejs
@@ -1,6 +1,6 @@
 <%- include("../../partials/examplesHead") %>
 
-<h4>28. Creating a brand</h4>
+<h4>Creating a brand</h4>
 <p>
   The brand includes a Brand Name <a href="https://support.docusign.com/en/guides/ndse-admin-guide-configure-branding">Configure Brands</a>.
 </p>
