--- a/views/pages/examples/eg030ApplyBrandToTemplate.ejs
+++ b/views/pages/examples/eg030ApplyBrandToTemplate.ejs
@@ -1,6 +1,6 @@
 <%- include("../../partials/examplesHead") %>
 
-<h4>30. Applying a brand to a template</h4>
+<h4>Applying a brand to a template</h4>
 <% if (templateOk) { %>
   <p>This code example demonstrates how to apply a brand to a template</p>
   <p>The access-code to utilize the example provided is: <strong>NJ9@D1</strong></p>
