--- a/views/pages/examples/eg032PauseSignatureWorkflow.ejs
+++ b/views/pages/examples/eg032PauseSignatureWorkflow.ejs
@@ -1,6 +1,6 @@
 <%- include("../../partials/examplesHead") %>
 
-<h4>32.  Pausing a signature workflow.</h4>
+<h4>Pausing a signature workflow.</h4>
 <p>
     This example demonstrates how to create an envelope where the workflow is paused before the envelope is sent to a second recipient.
     The envelope includes a .txt document.
