--- a/views/pages/examples/eg034UseConditionalRecipients.ejs
+++ b/views/pages/examples/eg034UseConditionalRecipients.ejs
@@ -1,6 +1,6 @@
 <%- include("../../partials/examplesHead") %>
 
-<h4>34. Using conditional recipients</h4>
+<h4>Using conditional recipients</h4>
 <p>
     This example demonstrates how to create an envelope where the workflow
     is routed to different recipients based on the value of a transaction.
