--- a/views/pages/examples/eg036DelayedRouting.ejs
+++ b/views/pages/examples/eg036DelayedRouting.ejs
@@ -1,6 +1,6 @@
 <%- include("../../partials/examplesHead") %>
 
-<h4>36. Send an envelope with delayed routing</h4>
+<h4>Send an envelope with delayed routing</h4>
 <p>
     This example demonstrates how to delay an envelope’s delivery between recipients using the delayed routing feature.
 </p>
