--- a/views/pages/examples/eg037SmsDelivery.ejs
+++ b/views/pages/examples/eg037SmsDelivery.ejs
@@ -1,6 +1,6 @@
 <%- include("../../partials/examplesHead") %>
 
-<h4>37. Request a signature by SMS delivery</h4>
+<h4>Request a signature by SMS delivery</h4>
 <p>Sends a signature request via an SMS message.
 </p>
 
