--- a/views/pages/examples/eg038ResponsiveSigning.ejs
+++ b/views/pages/examples/eg038ResponsiveSigning.ejs
@@ -1,6 +1,6 @@
 <%- include("../../partials/examplesHead") %>
 
-<h4>38. Create a signable HTML document</h4>
+<h4>Create a signable HTML document</h4>
 <p>Demonstrates how to create an HTML document for responsive signing.</p>
 
 <%- include("../../partials/docBody") %>
