--- a/views/pages/examples/eg001EmbeddedSigning.ejs
+++ b/views/pages/examples/eg001EmbeddedSigning.ejs
@@ -1,6 +1,6 @@
 <%- include("../../partials/examplesHead") %>
 
-<h4>1. Use embedded signing</h4>
+<h4>Use embedded signing</h4>
 <p>This example sends an envelope, and then uses embedded signing for the first signer.</p>
 <p>Embedded signing provides a smoother user experience for the signer: the DocuSign signing is initiated from your website.</p>
 
