--- a/views/pages/examples/eg020PhoneAuthentication.ejs
+++ b/views/pages/examples/eg020PhoneAuthentication.ejs
@@ -1,6 +1,6 @@
 <%- include("../../partials/examplesHead") %>
 
-<h4>20. Require Phone Authentication for a Recipient</h4>
+<h4>Require Phone Authentication for a Recipient</h4>
 
 <p>
   Sends an envelope that requires entering a six-digit code from a text message or phone call for the purpose of multifactor authentication.
