--- a/views/pages/examples/eg029ApplyBrandToEnvelope.ejs
+++ b/views/pages/examples/eg029ApplyBrandToEnvelope.ejs
@@ -1,6 +1,6 @@
 <%- include("../../partials/examplesHead") %>
 
-<h4>29. Applying a brand to an envelope.</h4>
+<h4>Applying a brand to an envelope.</h4>
 
 <p>
     The envelope includes a pdf document. Anchor text
