--- a/views/pages/examples/eg033UnpauseSignatureWorkflow.ejs
+++ b/views/pages/examples/eg033UnpauseSignatureWorkflow.ejs
@@ -1,6 +1,6 @@
 <%- include("../../partials/examplesHead") %>
 
-<h4>33. Unpausing a signature workflow</h4>
+<h4>Unpausing a signature workflow</h4>
 <p>
     This example demonstrates how to resume an envelope workflow that has been paused.
 </p>
