--- a/views/pages/examples/eg035ScheduledSending.ejs
+++ b/views/pages/examples/eg035ScheduledSending.ejs
@@ -1,6 +1,6 @@
 <%- include("../../partials/examplesHead") %>
 
-<h4>35. Schedule an envelope</h4>
+<h4>Schedule an envelope</h4>
 <p>
     This example demonstrates how to schedule an envelope using the scheduled sending feature.
 </p>
