--- a/views/pages/examples/eg040SetDocumentVisibility.ejs
+++ b/views/pages/examples/eg040SetDocumentVisibility.ejs
@@ -1,13 +1,7 @@
 <%- include("../../partials/examplesHead") %>
 
-<h4>Send an envelope using binary document transfer</h4>
-<p>The envelope includes a pdf, Word, and HTML document.</p>
-<p>Multipart data transfer is used to send the documents in binary format to DocuSign. 
-  Binary transfer is 33% more efficient than base64 encoding and is recommended for documents over 15M Bytes.
-</p>
-
-<p>Since binary transfer is not yet supported by the SDK, this example uses the API directly and 
-demonstrates how to do so.</p>
+<h4>Set document visibility for envelope recipients</h4>
+<p>Demonstrates how to set document visibility for envelope recipients.</p>
 
 <%- include("../../partials/docBody") %>
 
@@ -18,22 +12,33 @@ demonstrates how to do so.</p>
 <%- include("../../partials/gitSource") %>
 <form class="eg" action="" method="post" data-busy="form">
     <div class="form-group">
-      <label for="signerEmail">Signer Email</label>
-      <input type="email" class="form-control" id="signerEmail" name="signerEmail"
+      <label for="signer1Email">Signer1 Email</label>
+      <input type="email" class="form-control" id="signer1Email" name="signer1Email"
              aria-describedby="emailHelp" placeholder="pat@example.com" required
              value="<%= locals.dsConfig.signerEmail %>">
       <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
     </div>
     <div class="form-group">
-      <label for="signerName">Signer Name</label>
-      <input type="text" class="form-control" id="signerName" placeholder="Pat Johnson" name="signerName"
+      <label for="signer1Name">Signer1 Name</label>
+      <input type="text" class="form-control" id="signer1Name" placeholder="Pat Johnson" name="signer1Name"
              value="<%= locals.dsConfig.signerName %>" required>
+    </div>
+    <div class="form-group">
+      <label for="signer2Email">Signer2 Email</label>
+      <input type="email" class="form-control" id="signer2Email" name="signer2Email"
+             aria-describedby="emailHelp" placeholder="bob@mail.com" required >
+      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+    </div>
+    <div class="form-group">
+      <label for="signer2Name">Signer2 Name</label>
+      <input type="text" class="form-control" id="signer2Name" placeholder="Bob" name="signer2Name"
+             required>
     </div>
     <div class="form-group">
       <label for="ccEmail">CC Email</label>
       <input type="email" class="form-control" id="ccEmail" name="ccEmail"
-             aria-describedby="emailHelp" placeholder="pat@example.com" required
-      <small id="emailHelp" class="form-text text-muted">The email for the cc recipient must be different from the signer's email.</small>
+             aria-describedby="emailHelp" placeholder="pat@example.com" required >
+      <small id="emailHelp" class="form-text text-muted">The email for the cc recipient must be different from the signer emails.</small>
     </div>
     <div class="form-group">
       <label for="ccName">CC Name</label>
@@ -42,6 +47,6 @@ demonstrates how to do so.</p>
     </div>
     <input type="hidden" name="_csrf" value="<%- csrfToken %>">
     <button type="submit" class="btn btn-docu">Submit</button>
-  </form>
+</form>
   
 <%- include("../../partials/examplesFoot") %>
