CFR Part 11 Example (#99)
* adding CFR example and showing examples based on CFR status in config file

* fixing flow so CFR examples show without config value

* fixing examples that need to reroute when cfr enabled

* fixes

* moving CFR error text in manifest

* adding support for quickstart

* quickacg fix

--- a/views/pages/index_examples.ejs
+++ b/views/pages/index_examples.ejs
@@ -6,6 +6,8 @@
     <%- include("index_monitor_examples") %>
 <% } else if(locals.examplesApi.examplesApi.isAdminApi) { %>
     <%- include("index_admin_examples") %>
+<% } else if(locals.statusCFR == "enabled") { %>
+    <%- include("index_esignature_cfr_examples") %>
 <% } else { %>
     <%- include("index_esignature_examples") %>
 <% } %>
