--- a/views/pages/index_cfr_examples_list.ejs
+++ b/views/pages/index_cfr_examples_list.ejs
@@ -3,7 +3,7 @@
 
     <% group.Examples.forEach(function(example) { %>
         <% if (!example.SkipForLanguages || !example.SkipForLanguages.includes("node")) { %>
-            <% if (example.CFREnabled == "AllAccounts" || example.CFREnabled == "NonCFR") { %>
+            <% if (example.CFREnabled == "AllAccounts" || example.CFREnabled == "CFROnly") { %>
                 <h4
                     id=<%= "example".concat("0".repeat(3 - example.ExampleNumber.toString().length)).concat(example.ExampleNumber) %>
                 >
@@ -21,7 +21,7 @@
                     <% } else { %>
                         API method used:
                     <% } %>
-                
+                        
                     <% example.LinksToAPIMethod.forEach(function(link) { %>
                         <a target='_blank' href="<%= link.Path %>"><%= link.PathName %></a>
                     <% }); %>
