--- a/views/pages/click-examples/eg006EmbedClickwrap.ejs
+++ b/views/pages/click-examples/eg006EmbedClickwrap.ejs
@@ -44,8 +44,8 @@
         </div>
 
         <div class="form-group">
-            <label for="jobTitle"><%= example.Forms[0].Inputs[4].InputName %></label>
-            <input type="text" class="form-control" id="jobTitle" name="jobTitle"
+            <label for="title"><%= example.Forms[0].Inputs[4].InputName %></label>
+            <input type="text" class="form-control" id="title" name="title"
                    placeholder="<%= example.Forms[0].Inputs[3].InputPlaceholder %>" required/>
         </div>
 
