error handling and fixed redirects

--- a/views/pages/click-examples/eg006EmbedClickwrap.ejs
+++ b/views/pages/click-examples/eg006EmbedClickwrap.ejs
@@ -4,9 +4,14 @@
 
 <% include("../../partials/functions") %>
 
-<% if (clickwrapsData.clickwraps.length == 0) { %>
+<% if (clickwrapsData.clickwraps.length == 0 && clickwrapsExist.clickwraps.length == 0) { %>
     <%- formatString(example.RedirectsToOtherCodeExamples[0].RedirectText, formatString('href="eg00{0}"', example.RedirectsToOtherCodeExamples[0].CodeExampleToRedirectTo)) %>
     <form class="eg" action="eg001" method="get">
+        <%- include("../../partials/continueButton") %>
+    </form>
+<% } else if (clickwrapsData.clickwraps.length == 0) { %>
+    <%- formatString(example.RedirectsToOtherCodeExamples[1].RedirectText, formatString('href="eg00{0}"', example.RedirectsToOtherCodeExamples[1].CodeExampleToRedirectTo)) %>
+    <form class="eg" action="eg002" method="get">
         <%- include("../../partials/continueButton") %>
     </form>
 <% } else { %>
