--- a/views/pages/index_admin_examples.ejs
+++ b/views/pages/index_admin_examples.ejs
@@ -7,7 +7,7 @@
             a Node Express application.</p>
     <% } %>
 
-    <%- include("index_examples_list") %>
+    <%- include("index_admin_examples_list") %>
 
 </div>
 
