--- a/views/pages/index_rooms_examples.ejs
+++ b/views/pages/index_rooms_examples.ejs
@@ -10,4 +10,4 @@
 <h3 class="mt-4">Rooms API Code Examples for C#, PHP, Java, Node.js, Python, and Curl</h3>
 <% } %>
 
-<%- include("index_examples_list") %>
+<%- include("index_rooms_examples_list") %>
