--- a/views/pages/index_click_examples.ejs
+++ b/views/pages/index_click_examples.ejs
@@ -4,4 +4,4 @@
         a Node Express application.</p>
 <% } %>
 
-<%- include("index_examples_list") %>
+<%- include("index_click_examples_list") %>
