--- a/views/pages/index_monitor_examples.ejs
+++ b/views/pages/index_monitor_examples.ejs
@@ -31,7 +31,7 @@
             a Node Express application.</p>
     <% } %>
 
-    <%- include("index_examples_list") %>
+    <%- include("index_monitor_examples_list") %>
 </div>
 
 <!-- anchor-js is only for the index page -->
