--- a/views/partials/exampleInfo.ejs
+++ b/views/partials/exampleInfo.ejs
@@ -14,10 +14,16 @@
   <% } else { %>
     <%= locals.manifest.SupportingTexts.APIMethodUsed %>
   <% } %>
-  
-  <% example.LinksToAPIMethod.forEach(function(link) { %>
-      <a target='_blank' href="<%= link.Path %>"><%= link.PathName %></a>
-  <% }); %>
+
+  <% for (var i = 0; i < example.LinksToAPIMethod.length; i++) {%>
+    <% if (i + 1 == example.LinksToAPIMethod.length - 1) { %>
+      <a target='_blank' href="<%= example.LinksToAPIMethod[i].Path %>"><%= example.LinksToAPIMethod[i].PathName %></a>, and
+    <% } else if (i == example.LinksToAPIMethod.length - 1) { %>
+      <a target='_blank' href="<%= example.LinksToAPIMethod[i].Path %>"><%= example.LinksToAPIMethod[i].PathName %></a>
+    <% } else { %>
+      <a target='_blank' href="<%= example.LinksToAPIMethod[i].Path %>"><%= example.LinksToAPIMethod[i].PathName %></a>,
+    <% } %>
+  <% } %>
 </p>
 
 <%- include("gitSource") %>
