DEVDOCS-10193 - adding step5 which is in an .ejs file, by putting it inside a transparent HTML section

--- a/views/pages/eg006RoomsExampleDone.ejs
+++ b/views/pages/eg006RoomsExampleDone.ejs
@@ -5,9 +5,13 @@
 
 <code><%- json %></code>
 
+<p style="color: white;">
+//ds-snippet-start:Rooms6Step5
 <iframe width="100%" height="800" src=<%- url %>>
 
 </iframe>
+//ds-snippet-end:Rooms6Step5
+</p>
 
 <p><a href="/">Continue</a></p>
 
