--- a/views/pages/examples/eg044Embed.ejs
+++ b/views/pages/examples/eg044Embed.ejs
@@ -4,6 +4,9 @@
 <h2>The document has been embedded with focused view.</h2>
 <br />
 
+<!--
+//ds-snippet-start:eSign44Step6
+-->
 <!DOCTYPE html>
 <html>
 <head>
@@ -31,14 +34,13 @@
 
 <p><a href="/">Continue</a></p>
 
-<script src='https://docucdn-a.akamaihd.net/demo/1ds/libs/@embedded-js/core/latest/dist/bundle.js'></script>
+<script src='https://js.docusign.com/bundle.js'></script>
 <script>
     window.DocuSign.loadDocuSign('<%= integrationKey %>')
         .then((docusign) => {
             const signing = docusign.signing({
                 url: '<%= url %>',
                 displayFormat: 'focused',
-                //ds-snippet-start:eSign44Step6
                 style: {
                     /** High-level variables that mirror our existing branding APIs. Reusing the branding name here for familiarity. */
                     branding: {
@@ -56,7 +58,6 @@
                         position: 'bottom-center'
                     }
                 }
-                //ds-snippet-end:eSign44Step6
             });
 
             signing.on('ready', (event) => {
@@ -74,6 +75,8 @@
             // Any configuration or API limits will be caught here
         });
 </script>
-
+<!--
+//ds-snippet-end:eSign44Step6
+-->
 
 <%- include("../../partials/genericFoot") %>
