--- a/views/partials/exampleInfo.ejs
+++ b/views/partials/exampleInfo.ejs
@@ -9,19 +9,21 @@
 <% } %>
 
 <p>
-  <% if (example.LinksToAPIMethod.length > 1) { %>
-    <%= locals.manifest.SupportingTexts.APIMethodUsedPlural %>
-  <% } else { %>
-    <%= locals.manifest.SupportingTexts.APIMethodUsed %>
-  <% } %>
-
-  <% for (var i = 0; i < example.LinksToAPIMethod.length; i++) {%>
-    <% if (i + 1 == example.LinksToAPIMethod.length - 1) { %>
-      <a target='_blank' href="<%= example.LinksToAPIMethod[i].Path %>"><%= example.LinksToAPIMethod[i].PathName %></a>, and
-    <% } else if (i == example.LinksToAPIMethod.length - 1) { %>
-      <a target='_blank' href="<%= example.LinksToAPIMethod[i].Path %>"><%= example.LinksToAPIMethod[i].PathName %></a>
+  <% if (example.LinksToAPIMethod && example.LinksToAPIMethod.length !== 0) { %>
+    <% if (example.LinksToAPIMethod.length > 1) { %>
+      <%= locals.manifest.SupportingTexts.APIMethodUsedPlural %>
     <% } else { %>
-      <a target='_blank' href="<%= example.LinksToAPIMethod[i].Path %>"><%= example.LinksToAPIMethod[i].PathName %></a>,
+      <%= locals.manifest.SupportingTexts.APIMethodUsed %>
+    <% } %>
+
+    <% for (var i = 0; i < example.LinksToAPIMethod.length; i++) {%>
+      <% if (i + 1 == example.LinksToAPIMethod.length - 1) { %>
+        <a target='_blank' href="<%= example.LinksToAPIMethod[i].Path %>"><%= example.LinksToAPIMethod[i].PathName %></a>, and
+      <% } else if (i == example.LinksToAPIMethod.length - 1) { %>
+        <a target='_blank' href="<%= example.LinksToAPIMethod[i].Path %>"><%= example.LinksToAPIMethod[i].PathName %></a>
+      <% } else { %>
+        <a target='_blank' href="<%= example.LinksToAPIMethod[i].Path %>"><%= example.LinksToAPIMethod[i].PathName %></a>,
+      <% } %>
     <% } %>
   <% } %>
 </p>
