fixes and removing auth

--- a/views/partials/genericHead.ejs
+++ b/views/partials/genericHead.ejs
@@ -1,8 +1,9 @@
 <%- include("head") %>
 
 <% if (locals.user) { %>
-<div class="container" style="padding-top:30px">
-    <% } else { %>
-        <div class="container-full-bg">
+    <div class="container" style="padding-top:30px; margin-left: 90px;">
+    <section id="content" style="margin-top:-60px!important; padding-top:30px!important;">
+<% } else { %>
+    <div class="container-full-bg">
+    <section id="content" style="margin:0 90px 0 90px; padding:0 15px 0 15px;">
 <% } %>
-<section id="content" style="margin-top:-60px!important; padding-top:30px!important;">
