--- a/views/pages/index_examples_list.ejs
+++ b/views/pages/index_examples_list.ejs
@@ -18,6 +18,7 @@
                         : api.Name == "Monitor" ? "m"
                         : api.Name == "Rooms" ? "r"
                         : api.Name == "Connect" ? "cn"
+                        : api.Name == "WebForms" ? "w"
                         : ""; %>
                         
                         <h4
