use different partial when it is Quick ACG

--- a/views/partials/genericHead.ejs
+++ b/views/partials/genericHead.ejs
@@ -1,4 +1,8 @@
-<%- include("head") %>
+<% try { %>
+    <%- include("head") %>
+<% } catch(err) { %>
+    <%- include("headQuickACG") %>
+<% } %>
 
 <% if (locals.user) { %>
     <div class="container" style="padding-top:30px; margin-left: 90px;">
