--- a/views/pages/maestro-examples/eg001TriggerWorkflow.ejs
+++ b/views/pages/maestro-examples/eg001TriggerWorkflow.ejs
@@ -2,15 +2,16 @@
 
 <%- include("../../partials/exampleInfo") %>
 
-<form class="eg" action="" method="post" data-busy="form">
-  <% if(example.Forms && example.Forms[0].FormName) { %>
-    <%- example.Forms[0].FormName %>
-  <% } %>
-  <div class="form-group">
-    <label for="instanceName"><%= example.Forms[0].Inputs[0].InputName %></label>
-    <input type="text" class="form-control" id="instanceName" name="instanceName"
-           placeholder="<%= example.Forms[0].Inputs[0].InputPlaceholder %>" required>   
-  </div>
+<% if (templateOk) { %>
+  <form class="eg" action="mseg001" method="post" data-busy="form">
+    <% if(example.Forms && example.Forms[0].FormName) { %>
+      <%- example.Forms[0].FormName %>
+    <% } %>
+    <div class="form-group">
+      <label for="instanceName"><%= example.Forms[0].Inputs[0].InputName %></label>
+      <input type="text" class="form-control" id="instanceName" name="instanceName"
+             placeholder="<%= example.Forms[0].Inputs[0].InputPlaceholder %>" required>   
+    </div>
     <div class="form-group">
       <label for="signerEmail"><%= example.Forms[0].Inputs[1].InputName %></label>
       <input type="email" class="form-control" id="signerEmail" name="signerEmail"
@@ -37,6 +38,13 @@
 
     <input type="hidden" name="_csrf" value="<%- csrfToken %>">
     <%- include("../../partials/submitButton") %>
-</form>
-  
+  </form>
+<% } else { %>
+  <%- formatString(example.RedirectsToOtherCodeExamples[0].RedirectText, formatString('href="eg00{0}"', example.RedirectsToOtherCodeExamples[0].CodeExampleToRedirectTo)) %>
+
+  <form class="eg" action="eg008" method="get">
+    <%- include("../../partials/continueButton") %>
+  </form>
+<% } %>
+
 <%- include("../../partials/examplesFoot") %>
