--- a/views/pages/examples/eg042DocumentGeneration.ejs
+++ b/views/pages/examples/eg042DocumentGeneration.ejs
@@ -27,8 +27,7 @@
     <label for="job_title"><%= example.Forms[0].Inputs[3].InputName %></label>
     <select class="form-control" id="job_title" name="job_title">
       <option value="Software Engineer">Software Engineer</option>
-      <option value="Product Manager">Product Manager</option>
-      <option value="Sales Representative">Sales Representative</option>
+      <option value="Account Executive">Account Executive</option>
     </select>
   </div>
   <div class="form-group">
