Brand updates and adding missing dependency to acg quickstart (#173)
* brand updates and adding missing dependency to acg quickstart

* fixing readme Docusign capitalization

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -13,7 +13,7 @@
 
     <% if (locals.dsConfig.multiSourceChooser) { %>
       <h1 class="display-4">Welcome</h1>
-      <p class="Xlead">Run and explore DocuSign code examples with Authorization Code Grant or JWT Grant authentication</p>
+      <p class="Xlead">Run and explore Docusign code examples with Authorization Code Grant or JWT Grant authentication</p>
     <% } else { %>
       <h1 class="display-4">Node Launcher</h1>
       <p class="Xlead">
