Embedded sending update

--- a/views/pages/examples/eg011EmbeddedSending.ejs
+++ b/views/pages/examples/eg011EmbeddedSending.ejs
@@ -10,8 +10,8 @@
     <div class="form-group">
         <label for="startingView"><%= example.Forms[0].Inputs[0].InputName %></label>
         <select id="startingView" name="startingView" class="form-control">
-                <option value="tagging" selected>Tagging view</option>
-                <option value="recipient">Recipient &amp; Documents view</option>
+                <option value="Tagger" selected>Tagging view</option>
+                <option value="Prepare">Prepare view</option>
         </select>
     </div>
     <div class="form-group">
