--- a/views/pages/examples/eg022KbaAuthentication.ejs
+++ b/views/pages/examples/eg022KbaAuthentication.ejs
@@ -10,14 +10,13 @@
       <div class="form-group">
         <label for="signerEmail"><%= example.Forms[0].Inputs[0].InputName %></label>
         <input type="email" class="form-control" id="signerEmail" name="signerEmail"
-               aria-describedby="emailHelp" placeholder="<%= example.Forms[0].Inputs[0].InputPlaceholder %>" required
-               value="<%= locals.dsConfig.signerEmail %>">
+               aria-describedby="emailHelp" placeholder="<%= example.Forms[0].Inputs[0].InputPlaceholder %>" required>
         <small id="emailHelp" class="form-text text-muted"><%= locals.manifest.SupportingTexts.HelpingTexts.EmailWontBeShared %></small>
       </div>
       <div class="form-group">
         <label for="signerName"><%= example.Forms[0].Inputs[1].InputName %></label>
         <input type="text" class="form-control" id="signerName" placeholder="<%= example.Forms[0].Inputs[1].InputPlaceholder %>" name="signerName"
-               value="<%= locals.dsConfig.signerName %>" required>
+               required>
       </div>
       <input type="hidden" name="_csrf" value="<%- csrfToken %>">
       <%- include("../../partials/submitButton") %>
