--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,7 +2,7 @@
 
   <!-- IF not signed in -->
 <div>
-  <div class="jumbotron jumbotron-fluid"">
+  <div class="jumbotron jumbotron-fluid"" style="background-color: #210058!important">
 
     <table style="background-color: #210058;">
       <tbody>
