update button text, add folder path (#188)
* update button text, add folder path

--- a/views/pages/webforms-examples/eg001WebFormCreate.ejs
+++ b/views/pages/webforms-examples/eg001WebFormCreate.ejs
@@ -9,7 +9,7 @@
     <% } %>
 
     <input type="hidden" name="_csrf" value="<%- csrfToken %>">
-    <%- include("../../partials/submitButton") %>
+    <%- include("../../partials/continueButton") %>
 </form>
-  
+
 <%- include("../../partials/examplesFoot") %>
