retrieve webforms heading from manifest

--- a/views/pages/webforms-examples/eg001WebFormEmbed.ejs
+++ b/views/pages/webforms-examples/eg001WebFormEmbed.ejs
@@ -11,7 +11,7 @@
   <body>
     <div id="app">
       <div id="webform-customer-app-area">
-        <h1 id="webforms-heading">Embedded Webform Example</h1>
+        <h5 id="webforms-heading"><%= webformsHeading %></h5>
         <div id="docusign" class="webform-iframe-container">
           <p>Web Form will render here</p>
         </div>
