add notary example (#206)
* add notary example

* update example number

* Update sendThirdPartyNotary.js

* Update testHelpers.js

* Update index.js

* codeDepot markers and fixing properties

---------

Co-authored-by: Paige Rossi <paige.rossi@docusign.com>

--- a/views/pages/index_examples_list.ejs
+++ b/views/pages/index_examples_list.ejs
@@ -19,6 +19,7 @@
                         : api.Name == "Rooms" ? "r"
                         : api.Name == "Connect" ? "cn"
                         : api.Name == "WebForms" ? "w"
+                        : api.Name == "Notary" ? "n"
                         : ""; %>
                         
                         <h4
