--- a/views/pages/index_examples_list.ejs
+++ b/views/pages/index_examples_list.ejs
@@ -20,6 +20,7 @@
                         : api.Name == "Connect" ? "cn"
                         : api.Name == "WebForms" ? "w"
                         : api.Name == "Notary" ? "n"
+                        : api.Name == "ConnectedFields" ? "f"
                         : ""; %>
                         
                         <h4
