add maestro examples

--- a/views/pages/index_examples_list.ejs
+++ b/views/pages/index_examples_list.ejs
@@ -22,6 +22,7 @@
                         : api.Name == "Notary" ? "neg"
                         : api.Name == "ConnectedFields" ? "feg"
                         : api.Name == "Navigator" ? "nav"
+                        : api.Name == "Maestro" ? "mae"
                         : ""; %>
                         
                         <h4
