--- a/views/pages/maestro-examples/eg001TriggerWorkflow.ejs
+++ b/views/pages/maestro-examples/eg001TriggerWorkflow.ejs
@@ -10,8 +10,7 @@
     <div class="form-group">
       <label for="instanceName"><%= example.Forms[0].Inputs[0].InputName %></label>
       <input type="text" class="form-control" id="instanceName" name="instanceName"
-             aria-describedby="emailHelp" placeholder="<%= example.Forms[0].Inputs[0].InputPlaceholder %>" required
-             value="<%= locals.dsConfig.signerEmail %>">
+             aria-describedby="emailHelp" placeholder="<%= example.Forms[0].Inputs[0].InputPlaceholder %>" required>
     </div>
     <div class="form-group">
       <label for="signerEmail"><%= example.Forms[0].Inputs[1].InputName %></label>
