adding comment lines

--- a/views/pages/maestro-examples/eg001EmbedWorkflow.ejs
+++ b/views/pages/maestro-examples/eg001EmbedWorkflow.ejs
@@ -4,11 +4,11 @@
 <p><%- message %></p>
 
 <!--
-ds-snippet-start:Maestro1Step6
+//ds-snippet-start:Maestro1Step6
 -->
 <iframe width="900" height="600" src=<%- instanceUrl %>></iframe>
 <!--
-ds-snippet-end:Maestro1Step6
+//ds-snippet-end:Maestro1Step6
 -->
 
 <p><a href="/">Continue</a></p>
